tests/ui/attributes/malformed-fn-align.stderr
error[E0589]: invalid `repr(align)` attribute: `align` needs an argument
  --> $DIR/malformed-fn-align.rs:4:12
   |
LL |     #[repr(align)]
   |            ^^^^^ help: supply an argument here: `align(...)`

error[E0693]: incorrect `repr(align)` attribute format: `align` takes exactly one argument in parentheses
  --> $DIR/malformed-fn-align.rs:7:12
   |
LL |     #[repr(align(1, 2))]
   |            ^^^^^^^^^^^

error: aborting due to 2 previous errors

Some errors have detailed explanations: E0589, E0693.
For more information about an error, try `rustc --explain E0589`.
